[package]
name    = "chat-async"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

# ── aktifkan client+server, tambahkan backend SHA-1 dan RNG ──
tokio-websockets = { version = "0.5", features = [
    "client",       #  WebSocket client API
    "server",       #  WebSocket server API
    "ring",         #  SHA-1 backend via *ring*
    "rand"          #  RNG backend via *rand*
] }

# ── SinkExt & split() ──
futures-util = { version = "0.3", features = ["sink"] }

serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rand        = "0.8"
http        = "1"
